--- a/#src/scss/base.scss
+++ b/#src/scss/base.scss
@@ -62,6 +62,10 @@ h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: 400;}
 		flex-grow: 1;
 
 		@media (max-width: 1024px) {
-			max-width: 975px;
+			max-width: 1025px;
+			padding: 0 40px;
+		}
+		@media (max-width: 639px) {
+			padding: 0 15px;
 		}
 }
