--- a/#src/scss/header.scss
+++ b/#src/scss/header.scss
@@ -1,10 +1,12 @@
 .header {
   position: relative;
+  z-index: 10;
   width: 100%;
-  overflow: hidden;
-  z-index: 3;
   margin-top: 60px;
 
+  @media (max-width: 1024px) {
+    margin-top: 30px;
+  }
   @media (max-width: 1366px) and (max-height: 700px) {
     margin-top: 20px;
   }
@@ -37,11 +39,17 @@
 
   &__socials {
     margin: 0 35px 0 auto;
+    @media (max-width: 767px) {
+      margin: 0 0 0 auto;
+    }
   }
 
   // .header__apps
 
   &__apps {
+    @media (max-width: 767px) {
+      display: none;
+    }
   }
 }
 .socials {
