--- a/comeback/css/style.css
+++ b/comeback/css/style.css
@@ -506,6 +506,35 @@ h6 {
           box-shadow: 0px 2.89655px 50px #F80101;
 }
 
+.btn_modal {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+  max-width: 245px;
+  width: 100%;
+  height: 43px;
+  font-size: 16px;
+  line-height: 20px;
+  text-transform: uppercase;
+  color: #fff;
+  -webkit-transform: skew(-10deg);
+      -ms-transform: skew(-10deg);
+          transform: skew(-10deg);
+  background: #00BB1C;
+  -webkit-box-shadow: 0px 6.70011px 18.8821px rgba(0, 124, 31, 0.8);
+          box-shadow: 0px 6.70011px 18.8821px rgba(0, 124, 31, 0.8);
+  font-family: "Gilroy-Black", sans-serif;
+}
+
 @-webkit-keyframes fromLeft {
   0% {
     opacity: 0;
@@ -786,6 +815,141 @@ h6 {
   }
 }
 
+.modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+  z-index: 10;
+  background: rgba(6, 6, 6, 0.3);
+  -webkit-backdrop-filter: blur(9px);
+          backdrop-filter: blur(9px);
+  opacity: 0;
+  pointer-events: none;
+  -webkit-transition: all .3s ease;
+  -o-transition: all .3s ease;
+  transition: all .3s ease;
+}
+
+.modal.active {
+  opacity: 1;
+  pointer-events: all;
+}
+
+.modal-info {
+  -webkit-transition: all .3s ease;
+  -o-transition: all .3s ease;
+  transition: all .3s ease;
+  bottom: 0;
+  background-color: #fff;
+  width: 900px;
+  height: 65%;
+  z-index: 11;
+  position: relative;
+}
+
+.modal-info__wrapper {
+  overflow: hidden;
+  height: 98%;
+  padding: 31px 0 6px;
+}
+
+.modal-info__close {
+  width: 30px;
+  height: 30px;
+  position: absolute;
+  top: -15px;
+  right: -15px;
+  cursor: pointer;
+}
+
+.modal-info__close img {
+  max-width: 100%;
+  display: block;
+}
+
+.modal-info__content {
+  overflow-y: auto;
+  height: 100%;
+  padding: 20px 30px 30px 55px;
+  margin-right: 25px;
+  scrollbar-width: thin;
+  scrollbar-color: #129A48 #C4C4C4;
+}
+
+.modal-info__content::-webkit-scrollbar {
+  background-color: #C4C4C4;
+  width: 3px;
+}
+
+.modal-info__content::-webkit-scrollbar-thumb {
+  background-color: #129A48;
+}
+
+.modal-info__hero {
+  font-size: 18px;
+  line-height: 21px;
+  font-style: italic;
+  color: #009A17;
+  text-transform: uppercase;
+  margin-bottom: 25px;
+  font-family: "SFProDisplay-Bold", sans-serif;
+}
+
+.modal-info__title {
+  font-size: 16px;
+  line-height: 21px;
+  font-family: "SFProDisplay-Bold", sans-serif;
+  margin-bottom: 20px;
+}
+
+.modal-info__list {
+  font-size: 16px;
+  line-height: 19px;
+  font-family: "SFProDisplay-Light", sans-serif;
+}
+
+.modal-info__list-item {
+  margin-bottom: 20px;
+}
+
+.modal-info__list-item:last-child {
+  margin-bottom: 0;
+}
+
+.modal-info__list-item_8 {
+  font-family: "SFProDisplay-Semibold", sans-serif;
+  color: #009A17;
+}
+
+.modal-info__list-item_12 {
+  font-style: italic;
+  font-size: 14px;
+  line-height: 16px;
+}
+
+.modal-info__list-num {
+  font-family: "SFProDisplay-Semibold", sans-serif;
+  color: #009A17;
+}
+
+.modal-info__btn {
+  margin: 50px auto 20px auto;
+}
+
 @media (max-width: 2560px) and (min-height: 1280px) {
   .content__wrapper {
     padding: 20% 0 0 120px;
@@ -800,6 +964,10 @@ h6 {
 
   .content__img_player img {
     min-width: 100%;
+  }
+
+  .modal-info {
+    height: 66%;
   }
 }
 
@@ -1007,6 +1175,12 @@ h6 {
     height: 44px;
     padding-top: 3px;
   }
+
+  .modal-info {
+    width: 702px;
+    height: 80%;
+    margin: 0 33px;
+  }
 }
 
 @media (max-width: 1024px) and (max-height: 768px) {
@@ -1055,6 +1229,10 @@ h6 {
     max-width: 700px;
     right: -8%;
     bottom: 25%;
+  }
+
+  .modal-info {
+    height: 60%;
   }
 }
 
@@ -1120,6 +1298,12 @@ h6 {
   }
 }
 
+@media (max-width: 800px) and (min-height: 1180px) {
+  .modal-info {
+    height: 65%;
+  }
+}
+
 @media (max-width: 767px) {
   .header__socials {
     margin: 0 0 0 auto;
@@ -1138,6 +1322,25 @@ h6 {
     min-width: 600px;
     right: -25%;
     bottom: 20%;
+  }
+
+  .modal-info {
+    margin: 0 15px;
+    height: 90%;
+  }
+
+  .modal-info__content {
+    margin-right: 11px;
+    padding: 0 25px 20px 22px;
+  }
+}
+
+@media (max-width: 640px) {
+  .modal-info__close {
+    width: 20px;
+    height: 22px;
+    top: -10px;
+    right: -10px;
   }
 }
 
