--- a/#src/scss/base.scss
+++ b/#src/scss/base.scss
@@ -53,6 +53,13 @@ h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: 400;}
 	background-size: cover;
 	background-repeat: no-repeat;
 	background-position: center;
+
+	@media (max-width: 1024px) {
+		background-size: 1024px;
+	}
+	@media (max-width: 425px) {
+		background-size: 600px;
+	}
 }
 .container {
     max-width: 1450px;
