--- a/#src/scss/content.scss
+++ b/#src/scss/content.scss
@@ -57,6 +57,10 @@
     @media (max-width: 320px) and (max-height: 500px) {
       padding: 5% 0 0 15px;
     }
+
+    @media (max-height: 375px) {
+      padding: 2% 0 0 15px;
+    }
   }
 
   // .content__images
@@ -147,6 +151,10 @@
         min-width: auto;
         bottom: 2%;
         left: 15%;
+      }
+
+      @media (max-height: 375px) {
+        display: none;
       }
     }
 
@@ -284,6 +292,12 @@
       }
       @media (max-width: 320px) and (max-height: 500px) {
         bottom: 13%;
+      }
+
+      @media (max-height: 375px) {
+        max-width: 300px;
+        bottom: -5%;
+        right: 10%;
       }
     }
   }
@@ -429,6 +443,10 @@
     }
     @media (max-width: 320px) {
       margin-left: -5%;
+    }
+
+    @media (max-width: 812px) and (max-height: 375px) {
+      max-width: 180px;
     }
   }
 
