--- a/comeback/css/style.css
+++ b/comeback/css/style.css
@@ -1240,6 +1240,12 @@ h6 {
   }
 }
 
+@media (max-width: 812px) and (max-height: 375px) {
+  .content__sum {
+    max-width: 180px;
+  }
+}
+
 @media (max-width: 800px) {
   .content__wrapper {
     padding: 25% 0 0 30px;
@@ -1505,6 +1511,22 @@ h6 {
 
   .content__img_player {
     bottom: 13%;
+  }
+}
+
+@media (max-height: 375px) {
+  .content__wrapper {
+    padding: 2% 0 0 15px;
+  }
+
+  .content__img_ball-one {
+    display: none;
+  }
+
+  .content__img_player {
+    max-width: 300px;
+    bottom: -5%;
+    right: 10%;
   }
 }
 
